// Copyright 2021 The SODA Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = ".;aksk";

import "google/protobuf/struct.proto";

service AkSk {
    rpc ListAkSk(ListAkSkRequest) returns (ListAkSkResponse) {}
    rpc GetAkSk(GetAkSkRequest) returns (GetAkSkResponse) {}
    rpc CreateAkSk(CreateAkSkRequest) returns (CreateAkSkResponse) {}
    rpc DeleteAkSk(DeleteAkSkRequest) returns (DeleteAkSkResponse) {}
}

message AkSk {
    //The uuid of the AkSk.
    string id = 1;
    // The createdAt representing the server time when the AkSk was created.
    string createdAt = 2;
    // The updatedAt representing the server time when the AkSk was updated.
    string updatedAt = 3;
    // The name of the AkSk.
    string name = 4;
    // The description of the AkSk.
    string description = 5;
    // The uuid of the project that the AkSk belongs to.
    string tenantId = 6;
    // The uuid of the user that the AkSk belongs to.
    string userId = 7;
    // The uuid of the backend that the AkSk belongs to.
    string backendId = 8;
    // The uuid of the backend that the AkSk belongs to.
    string backend = 9;
    // The size of the AkSk requested by the user.
    int64  size = 10;
    // The type of the AkSk.
    string type = 11;
    // The location that AkSk belongs to.
    string region = 12;
    // The locality that AkSk belongs to.
    string availabilityZone = 13;
    // The status of the AkSk.
    string status = 14;
    // The iops of the AkSk.
    int64 iops = 15;
    // The uuid of the snapshot which the AkSk is created
    string snapshotId = 16;
    // Any tags assigned to the AkSk.
    repeated Tag tags = 17;
    // Indicates whether Multi-Attach is enabled.
    bool multiAttachEnabled = 18;
    // Indicates whether the AkSk is encrypted.
    bool encrypted = 19;
    // EncryptionSettings that was used to protect the AkSk encryption.
    map<string, string> encryptionSettings = 20;
    // Metadata should be kept until the semantics between AkSk and backend storage resource.
    google.protobuf.Struct metadata = 21;
}

message Tag {
    // The key of the tag.
    string key = 1;
    // The value of the tag.
    string value = 2;
}

message ListAkSkRequest {
    int32 limit = 1;
    int32 offset = 2;
    repeated string sortKeys = 3;
    repeated string sortDirs = 4;
    map<string, string> Filter = 5;
}

message ListAkSkResponse {
    repeated AkSk AkSks = 1;
    int32 next = 2;
}

message GetAkSkRequest {
    string id = 1;
    AkSk AkSk = 2;
}

message GetAkSkResponse {
    AkSk AkSk = 1;
}

message CreateAkSkRequest {
    AkSk AkSk = 1;
}

message CreateAkSkResponse {
    AkSk AkSk = 1;
}

message DeleteAkSkRequest {
    string id = 1;
    AkSk AkSk = 2;
}

message UpdateAkSkRequest {
    string id = 1;
    AkSk AkSk = 2;
}

message UpdateAkSkResponse {
    AkSk AkSk = 1;
}

message DeleteAkSkResponse {
}

message BaseRequest {
    string id = 1;
}

